add colors to Download and Upload icons